[gd_scene load_steps=12 format=2]

[ext_resource path="res://combatants/Combatant.tscn" type="PackedScene" id=1]
[ext_resource path="res://combatants/player/Player.gd" type="Script" id=2]
[ext_resource path="res://ui/PercentBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/square.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/images/Shield32x32.png" type="Texture" id=5]
[ext_resource path="res://assets/images/player-sketch.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=4]
size = 8
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 8
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=7]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "prepare"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3 ]
}

[sub_resource type="Animation" id=8]
resource_name = "strike"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_strike_anim_finished"
} ]
}

[node name="Player" instance=ExtResource( 1 )]
script = ExtResource( 2 )
max_health = 50.0

[node name="Sprite" parent="Pivot" index="0"]
position = Vector2( 2.86102e-06, 1.90735e-06 )
scale = Vector2( 1, 1 )
texture = ExtResource( 6 )
vframes = 3
hframes = 3

[node name="StartChargingTimer" type="Timer" parent="." index="2"]
wait_time = 0.5
one_shot = true

[node name="EnergyBar" parent="." index="3" instance=ExtResource( 3 )]
margin_left = -46.0
margin_top = 24.0
margin_right = 10.0
margin_bottom = 32.0
rect_rotation = -90.0
fill_color = Color( 1, 0.470588, 0, 1 )

[node name="ChargeBar" parent="." index="4" instance=ExtResource( 3 )]
margin_left = -37.0
margin_top = 24.0
margin_right = 19.0
margin_bottom = 32.0
rect_rotation = -90.0
fill_color = Color( 0.65098, 0.65098, 0.65098, 1 )

[node name="StanceLabel" type="Label" parent="." index="5"]
margin_left = -48.0
margin_top = 32.0
margin_right = 48.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 4 )
text = "Stance"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StanceTooltip" type="ColorRect" parent="." index="6"]
visible = false
margin_left = 32.0
margin_top = -28.0
margin_right = 144.0
margin_bottom = 28.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="StanceTooltip" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 2.0
margin_right = 1.0
margin_bottom = 2.0
custom_fonts/font = SubResource( 5 )
text = "Choose stance

D: Ready
L: Defensive
R: Aggressive"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Shield" type="Sprite" parent="." index="7"]
position = Vector2( 26, 0 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="8"]
autoplay = "idle"
playback_speed = 16.0
anims/idle = SubResource( 7 )
anims/prepare = SubResource( 6 )
anims/strike = SubResource( 8 )
[connection signal="timeout" from="StartChargingTimer" to="." method="_on_StartChargingTimer_timeout"]
